# anpl_ros_infrastructure

./: .gitignore  CMakeLists.txt  package.xml  pioneer3dx.urdf.xacro
gazebo_models/ANPL_Lab_Extended/: model.config  model.sdf
gazebo_models/ANPL_Lab_smaller/: model.sdf
gazebo_models/apriltags/april_tag_0/: model.config  model.sdf
gazebo_models/apriltags/april_tag_0/meshes/: april_tag_0.dae
gazebo_models/apriltags/april_tag_1/: model.config  model.sdf
gazebo_models/apriltags/april_tag_1/meshes/: april_tag_1.dae
gazebo_models/apriltags/april_tag_10/: model.config  model.sdf
gazebo_models/apriltags/april_tag_10/meshes/: april_tag_10.dae
gazebo_models/apriltags/april_tag_2/: model.config  model.sdf
gazebo_models/apriltags/april_tag_2/meshes/: april_tag_2.dae
gazebo_models/apriltags/april_tag_3/: model.config  model.sdf
gazebo_models/apriltags/april_tag_3/meshes/: april_tag_3.dae
gazebo_models/apriltags/april_tag_4/: model.config  model.sdf
gazebo_models/apriltags/april_tag_4/meshes/: april_tag_4.dae
gazebo_models/apriltags/april_tag_5/: model.config  model.sdf
gazebo_models/apriltags/april_tag_5/meshes/: april_tag_5.dae
gazebo_models/apriltags/april_tag_6/: model.config  model.sdf
gazebo_models/apriltags/april_tag_6/materials/textures/: april_tag.blend  april_tag.blend1  april_tag.blend2
gazebo_models/apriltags/april_tag_6/meshes/: april_tag_6.dae
gazebo_models/apriltags/april_tag_7/: model.config  model.sdf
gazebo_models/apriltags/april_tag_7/meshes/: april_tag_7.dae
gazebo_models/apriltags/april_tag_8/: model.config  model.sdf
gazebo_models/apriltags/april_tag_8/meshes/: april_tag_8.dae
gazebo_models/apriltags/april_tag_9/: model.config  model.sdf
gazebo_models/apriltags/april_tag_9/meshes/: april_tag_9.dae
gazebo_worlds/: ANPL.world  ANPL_Lab_big.world  ANPL_Lab_real_test.world  ANPL_Lab_small.world  ANPL_Lab_smaller.world  ANPL_lab_smaller_no_desktop.world  GB1.world  GWC1.world  Gworld1.world  Gworld2.world  Gworld3.world  Gworld4.world  IndoorNew.world  World1.world  base_config_C.world  basic.world  cafe.world  can2b2t1  check.world  coridor.sdf  corridor2.world  corridor2_apriltags.world  empty.world  empty_minus_z.world  empty_with_tags.world  outdoor.world  test2  test2.world  willowgarage.world  willowgarage_apriltags.world
gazebo_worlds/2u2i/: GWi1.world  GWi2.world  GWu1.world  GWu2.world
gazebo_worlds/C1/: GWC2.world  GWC3.world
gazebo_worlds/barrier/: b2t.world  can1b2t.world  can2b2.world  can2b2t.world
gazebo_worlds/can/: trashcan1t0.world  trashcan1t1.world  trashcan2t0.world  trashcan2t1.world
gazebo_worlds/models/ANPL_Lab_real_test/: model.config  model.sdf
gazebo_worlds/models/ANPL_Lab_smaller/: model.config
gazebo_worlds/models/ANPL_Lab_smaller_no_desktop/: model.config  model.sdf
launch/: ARdrone_corridor_apriltags.launch  ARdrone_willow_apriltags.launch  Pioneer_Corridor.launch  Pioneer_Corridor2.launch  Pioneer_Corridor_loop.launch  Pioneer_world.launch  Untitled Document  astra_laser.launch  empty_world.launch  follower_keyop.launch  image_from_bag.launch  leader_keyop.launch  mav_hovering_example_with_vi_sensor.launch  mav_takeoff.launch  mavros_posix_sitl.launch  more_robots.launch  multi_robot_scenario.launch  pioneer3at_world.launch  pioneer_world_new.launch  posix_sitl.launch  quad_with_vi.launch  quad_with_vi_keyboard.launch  record_rosbag_pixhawk_xtion_duo3_viso2.launch  robots.launch  robots2.launch  rosbag_play_zed.launch  rosbag_record.launch  run_multi_bags.launch  rviz_mav.launch  rviz_pioneer.launch  rviz_turtlebot.launch  spawn_mav.launch  spawn_pioneer.launch  spawn_pioneer3at.launch  spawn_pioneer3at_A.launch  spawn_pioneer3at_B.launch  spawn_pioneer3at_NoKey.launch  spawn_quadrotor.launch  spawn_turtlebot.launch  test_rig.launch  (+5 more)
robots_description/pioneer_description/: Readme.txt  pioneer3at.urdf  pioneer3at.urdf.xacro  pioneer3at.xacro  pioneer3atA.urdf.xacro  pioneer3atB.urdf.xacro
robots_description/pioneer_description/urdf/: pioneer3dx.urdf.xacro
robots_description/quadrotor_description/: quadrotor.urdf.xacro  quadrotor.xacro  quadrotor_base.urdf.xacro  quadrotor_plugins.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
robots_description/turtlebot_description/robots/: kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro
robots_description/turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro
robots_description/turtlebot_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  kinect.urdf.xacro
rviz/: mav.rviz  pioneer.rviz  turtlebot.rviz
scripts/: collector.py  common.py  facedetection.py  pioneer3at_gazebo_teleop_key.py  pioneer_teleop_key.py  service_client.py  sync.py  tf_brod.py  turtlebotController.py  turtlebot_controller_service_server.py  webcameraDriver.py
src/: PlannerData.cpp  hovering_example.cpp  icp_pcl_check.cpp  incrementally_pairs_of_clouds.cpp  match_pcl.cpp  mav_keyboard_control.cpp  mav_pose_control.cpp  mav_takeoff.cpp  pioneerTfPublisher.cpp  pirate_keybord.cpp
src/test_icp/: icp_program.cpp  test_program.cpp
src/test_icp/include/: filters.h  registration.h  typedefs.h
srv/: TurtlebotControllerService.srv
